# clinicaltrials-rs

./: .gitignore  Cargo.toml  README.md  config.json
src/: build_csv_item.rs  get_study_hits_by_query.rs  lib.rs  load_config.rs  main.rs  write_to_csv.rs
src/model/: config.rs  csv_item.rs  mod.rs  search.rs  study.rs
