[package]
name = "clinicaltrials-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
url = "2"

[profile.release]
lto = true
strip = true
